main.css
/* Author: Nicholas Le
   Date: 08/20/19
*/

/* Header Styles */
.card-header {
    text-align: center;
    background-color: #40A0E0;
    border-bottom: 0;
}

/* Body Styles */
body{
  font-weight: 350;
  line-height: 25px;
  position: relative;
  /* background-color: #999999; */
}

.card-body{
  padding:0px;
  text-align: center;
  display: table;
  clear: both;
  content: "";
  overflow: auto;
  
}



p.card-text{
  color: #FFFFFF;
  background-color: #40A0E0;
}



/* body div styles */
 #services {
    height: 50vh;
    /* padding-top: 55px; */
    position: relative;
    overflow: auto;
  }
  
 #about, #education, #skills{
      height: 45vh;
      /* padding-top: 55px; */
      position: relative;
      overflow: auto;
  }
  div{
  display: block;
  padding: 0px;
}

div.col-md-12{
  padding: 0px;
}




/* Nav Styles */
nav > ul > li > a.nav-link:visited,
nav > ul > li > a.nav-link:link {
    color: #696969;
    text-decoration: none;
    font-size: 1.4vw;
}

nav > ul > li > a.nav-link:hover,
nav > ul > li > a.nav-link:active {
    color: #000;
    text-decoration: underline;
}



/* Body Paragraph styles */
.card-subtitle {
  padding-top: 10px;
}

#about{
  padding-top: 100px;
  margin-bottom: 0px;
  background-color: #40A0E0;
}


section#skills{
  color: #FFFFFF;
  padding-top: 80px;
  background-color: #E040A0;
}

.list-group-item{
  padding: 13px;
  background-color: #4050E0;
  color: #FFFFFF;
}

/* Service styles */
.container-fluid{
  padding: 0px;
}

.row{
  box-sizing: border-box;
}

.col-md-6{
  position: relative;
  min-height: 3px;
  padding: 80px;
  background-color: #40A0E0;
}

h5{
  text-align: center;
  color: #ffffff;
}

p.service{
  text-align: center;
  margin: 13px 0px;
  color: #ffffff;
}

/* form styles */
#contact-form {
  margin: 5%;
  position: relative;
}

#contact-form ul {
  list-style: none;
  background-color: #FFFFFF;
  border-radius: 5px;
  margin-bottom: 40px;
}

#contact-form li {
  padding: 10px;

}

#contact-form li:last-of-type {
  border-bottom: none;
}

#contact-form label {
  display: block;
  font-size: .8em;
  color: #999;
  padding-left: 5px;
}

#contact-form input, #contact-form textarea {
  width: 100%;
  padding: 5px;
  border: 2px solid #666;
  resize: vertical;
}

.btn {
  display: inline-block;
  padding: 10px 20px;
  color: #666;
  font-weight: bold;
  transition: background .3s ease;
  border: 2px solid #666;
  border-radius: 5px;
  
}

.btn:hover {
  background: #666;
  color: #fff;
}

.center {
  display: table;
  margin: 0 auto;
  margin-left: 593px;
}

.form-container{
  height: 698px;
}


/* footer styles */
footer {
  position: relative;
  bottom: 0;
  width: 100%;
  position: relative;
  height: 75px;
  background-color: #E040A0;
  padding: 0px;
}

.navbar-left {
  display: inline-block;
  text-align: center;
}

footer a{
    color: #222;
}

footer a:hover{
    color: #ffffff;
    text-decoration: none;    
}
.social:hover {
  -webkit-transform: scale(1.0);
  -webkit-transition-duration: 0.5s;
  transform: scale(1.0);
  transition-duration: 0.5s;
}
.social {
  -webkit-transform: scale(0.8);
  transform: scale(0.8);
  color: #222;
  
}
 .phone{
   visibility: hidden;
}

